# 151-mamba4cast-zero-shot

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  forecast.py  mamba4cast_model.py  requirements.txt  synthetic_data.py
rust/: Cargo.toml
rust/examples/: trading_signals.rs  zero_shot_forecast.rs
rust/src/: lib.rs
rust/src/model/: forecaster.rs  mamba4cast.rs  mod.rs
